--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -12,6 +12,13 @@
     margin: 0;
 }
 
+h4 {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 31px;
+    margin: 0;
+}
+
 p {
     font-size: 16px;
     line-height: 26px;
