--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,21 +1,33 @@
-.h2 {
+body {
+    font-size: 14px;
+    line-height: 22px;
+}
+
+.h1 {
     font-weight: 500;
     font-size: 36px;
     line-height: 50px;
     margin: 0;
 }
 
-.h3 {
+.h2 {
     font-weight: 500;
-    font-size: 26px;
+    font-size: 28px;
     line-height: 39px;
+    margin: 0;
+}
+
+h3 {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 31px;
     margin: 0;
 }
 
 h4 {
     font-weight: 500;
-    font-size: 22px;
-    line-height: 31px;
+    font-size: 18px;
+    line-height: 29px;
     margin: 0;
 }
 
@@ -23,4 +35,29 @@ p {
     font-size: 16px;
     line-height: 26px;
     margin: 0;
+}
+
+.link {
+    font-size: 16px;
+    color: #3275EE;
+    text-decoration: none;
+
+    &:hover {
+        color: #225ECA;
+        text-decoration: none;
+    }
+
+    &:active {
+        color: #1C4A9D;
+    }
+}
+
+.link-dark  {
+    color: #001D3A;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
 }
