--- a/src/scss/components/_inputs.scss
+++ b/src/scss/components/_inputs.scss
@@ -30,6 +30,7 @@
     position: absolute;
     left: 16px;
     top: 13px;
+    z-index: 2;
     color: #646464;
     font-size: 16px;
     line-height: 26px;
@@ -62,7 +63,7 @@
     position: absolute;
     left: 0;
     top: 100%;
-    margin-top: 6px;
+    margin-top: 3px;
 }
 
 .materil-group.error .materil-group__error-text {
