--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "~bootstrap/scss/reboot";
 
 // BS grid
+@import "~bootstrap/scss/containers";
 @import "~bootstrap/scss/grid";
 
 // BS components
@@ -18,8 +19,13 @@
 
 // fonts
 @import "base/fonts";
+@import "base/typography";
 
 // Custom components
-@import "components/header";
 @import "components/buttons";
 @import "components/inputs";
+@import "components/select";
+@import "components/grid";
+@import "components/header";
+@import "components/breadcrumbs";
+@import "components/catalog";
