--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,3 +29,6 @@
 @import "components/header";
 @import "components/breadcrumbs";
 @import "components/catalog";
+@import "components/capabilities";
+
+@import "components/navigation";
