home page product-catalog

--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -1,5 +1,7 @@
 // COLOR
 $blue: #3275EE;
+$yellow: #FCF29C;
+$text_color: #001D3A;
 
 // FONT FAMILY
 $font-weight-normal: 400;         // Regular (normal)
