--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,5 +30,7 @@
 @import "components/breadcrumbs";
 @import "components/catalog";
 @import "components/capabilities";
+@import "components/banner-card";
+@import "components/product-catalog";
 
 @import "components/navigation";
