--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,7 +1,7 @@
 .btn {
     display: inline-block;
     outline: none !important;
-    padding: 11px 32px;
+    padding: 9px 32px;
     text-align: center;
     font-weight: 500;
     font-size: 16px;
@@ -11,6 +11,7 @@
     border-radius: 8px;
     border: 2px solid transparent;
     cursor: pointer;
+    text-decoration: none;
     transition: background-color 0.2s ease-in-out;
 
     &:hover,
@@ -28,6 +29,7 @@
     &:hover {
         background-color: #225ECA;
         border-color: #225ECA;
+        color: #fff;
     }
 
     &:active {
