--- a/src/scss/components/_product-catalog.scss
+++ b/src/scss/components/_product-catalog.scss
@@ -29,8 +29,9 @@
   flex-grow: 1;
 }
 
-.product-catalog__left{
+.product-catalog__right{
   flex-shrink: 0;
+  width: 294px;
 }
 
 .product-catalog__product{
