--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,5 +32,6 @@
 @import "components/capabilities";
 @import "components/banner-card";
 @import "components/product-catalog";
+@import "components/statistic";
 
 @import "components/navigation";
