--- a/src/scss/components/_banner-card.scss
+++ b/src/scss/components/_banner-card.scss
@@ -2,6 +2,7 @@
 
 .banner-card{
   display: inline-block;
+  width: 100%;
   padding: 48px 30px 43px;
   background-color: $yellow;
   border-radius: 8px;
