home pagd tariff

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,5 +33,7 @@
 @import "components/banner-card";
 @import "components/product-catalog";
 @import "components/statistic";
+@import "components/tarif";
+@import "components/tariff-card";
 
 @import "components/navigation";
