--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -2,6 +2,7 @@
 $blue: #3275EE;
 $yellow: #FCF29C;
 $text_color: #001D3A;
+$grey: #646464;
 
 // FONT FAMILY
 $font-weight-normal: 400;         // Regular (normal)
