--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -11,7 +11,7 @@
     border-radius: 8px;
     border: 2px solid transparent;
     cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
+    // transition: background-color 0.2s ease-in-out;
 
     &:hover,
     &:focus,
