--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -16,12 +16,90 @@
     align-items: flex-start;
 }
 
-.catalog__left {
+.sidebar {
     width: 235px;
     margin-right: 30px;
+    padding-top: 30px;
 }
 
-.catalog__right {
+.sidebar__item__collapse-btn {
+    position: relative;
+    width: 100%;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color: #001D3A;
+    text-align: left;
+    padding: 7px 20px 7px 0;
+
+    &:after {
+        content: '';
+        display: inline-block;
+        width: 12px;
+        height: 7px;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        margin-top: -2px;
+        background-image: url(../img/icon-down.svg);
+    }
+
+    &:hover {
+        color: #225ECA;
+    }
+}
+
+.sidebar__item__search {
+    margin-top: 9px;
+    margin-bottom: 16px;
+}
+
+.sidebar__links {
+    max-height: 270px;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out;
+
+    &.full-height {
+        max-height: fit-content;
+    }
+}
+
+.sidebar__links__item {
+    margin-bottom: 12px;
+}
+
+.sidebar__link {
+    display: block;
+    font-size: 14px;
+    line-height: 22px;
+}
+
+.sidebar__show-more {
+    color: #3275EE;
+    text-align: left;
+    padding: 0 20px 0 0;
+    font-weight: 400;
+    position: relative;
+}
+
+.sidebar__show-more .arrow-down {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top: -2px;
+
+    path {
+        fill: #3275EE;
+    }
+}
+
+.sidebar__show-more.active .arrow-down {
+    transform: rotateZ(180deg);
+}
+
+
+
+.catalog__content {
     width: 985px;
 }
 
