finish home page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,5 +35,8 @@
 @import "components/statistic";
 @import "components/tarif";
 @import "components/tariff-card";
+@import "components/marketing-banner";
+@import "components/advantages";
+@import "components/faq";
 
 @import "components/navigation";
