--- a/src/scss/components/_statistic.scss
+++ b/src/scss/components/_statistic.scss
@@ -1,7 +1,7 @@
 @import "../abstract/variables";
 
 .statistic{
-  padding: 56px 0 80px;
+  padding: 80px 0 80px;
 }
 
 .statistic__title{
@@ -59,5 +59,5 @@
 }
 
 .statistic__description{
-  padding: 12px;
+  padding-bottom: 12px;
 }
