--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -2,6 +2,9 @@
 
 .advantages{
   padding: 80px 0;
+  background-image: url('../../img/adtantages.png');
+  background-repeat: no-repeat;
+  background-position: right 83%;
 }
 
 .advantages__title{
