--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@
 @import "~bootstrap/scss/modal";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/modal";
+@import "~bootstrap/scss/close";
 @import "~bootstrap/scss/accordion";
 @import "~bootstrap/scss/nav";
 // @import "~bootstrap/scss/bootstrap";
