--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,5 +43,7 @@
 @import "components/marketing-banner";
 @import "components/advantages";
 @import "components/faq";
+@import "components/tender-card";
+@import "components/table";
 
 @import "components/navigation";
