--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -3,6 +3,7 @@ $blue: #3275EE;
 $yellow: #FCF29C;
 $text_color: #001D3A;
 $grey: #646464;
+$green: #44C325;
 
 // FONT FAMILY
 $font-weight-normal: 400;         // Regular (normal)
