--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,11 +1,11 @@
 .btn {
     display: inline-block;
     outline: none !important;
-    padding: 9px 32px;
+    padding: 11px 32px;
     text-align: center;
     font-weight: 500;
     font-size: 16px;
-    line-height: 26px;
+    line-height: 160%;
     color: #fff;
     background-color: transparent;
     border-radius: 8px;
@@ -19,6 +19,11 @@
     &:active {
         outline: none !important;
         box-shadow: none !important;
+    }
+
+    &--sm {
+        font-size: 14px;
+        padding: 6px 24px;
     }
 }
 
