--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -46,5 +46,6 @@
 @import "components/faq";
 @import "components/tender-card";
 @import "components/table";
+@import "components/modal";
 
 @import "components/navigation";
