--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -12,7 +12,7 @@
         content: '';
         width: 6px;
         height: 9px;
-        background: url(../img/icon-right.svg) no-repeat center center /contain;
+        background: url(../img/breadcrumbs-right.svg) no-repeat center center /contain;
         position: absolute;
         right: 16px;
         top: 50%;
