--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 @import "~bootstrap/scss/accordion";
 @import "~bootstrap/scss/nav";
 @import "~bootstrap/scss/dropdown";
+@import "~bootstrap/scss/bootstrap-grid";
 // @import "~bootstrap/scss/bootstrap";
 
 // plugins
