--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -20,13 +20,15 @@
 
 .navigation__list{
   width: 100%;
+  padding: 0 16px;
+  justify-content: space-between;
   display: flex;
   list-style: none;
 }
 
 .navigation__link{
   display: inline-block;
-  padding: 12.5px 30px;
+  padding: 12.5px 20px;
   text-decoration: none;
   position: relative;
   z-index: 2;
