--- a/src/scss/components/_inputs.scss
+++ b/src/scss/components/_inputs.scss
@@ -1,3 +1,5 @@
+@import '../abstract/variables';
+
 .base-input {
     height: 40px;
     background: #F2F2F2;
@@ -69,3 +71,90 @@
 .materil-group.error .materil-group__error-text {
     display: block;
 }
+
+[type="radio"]:checked,
+[type="radio"]:not(:checked) {
+    position: absolute;
+    left: -9999px;
+}
+[type="radio"]:checked + label,
+[type="radio"]:not(:checked) + label
+{
+    position: relative;
+    padding-left: 24px;
+    cursor: pointer;
+    line-height: 20px;
+    display: inline-block;
+    color: $text_color;
+    font-size: 16px;
+}
+[type="radio"]:checked + label:before,
+    [type="radio"]:not(:checked) + label:before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 2px;
+    width: 16px;
+    height: 16px;
+    border: 2px solid #646464;
+    border-radius: 100%;
+    background: #fff;
+}
+
+[type="radio"]:checked + label:before {
+    border: 4px solid #3275EE;
+}
+
+
+/* ******************* Checkbox */
+
+label {
+    position: relative;
+    cursor: pointer;
+}
+
+input[type="checkbox"], input[type="radio"] {
+    position: absolute;
+    left: -999em;
+}
+input[type="checkbox"] + span{
+    padding-left: 24px;
+    color: $text_color;
+    font-size: 16px;
+    line-height: 160%;
+}
+
+input[type="checkbox"] + span:before {
+    content: "";
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    vertical-align: middle;
+    border: 2px solid #646464;
+    border-radius: 2px;
+    color: $text_color;
+}
+
+input[type="checkbox"]:checked + span:before {
+    content: "";
+    background-color: #3275EE;
+    border-color: #3275EE;
+}
+
+input[type="checkbox"]:checked + span:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 16px;
+    height: 16px;
+    background-image: url(../img/check-icon.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
