--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,5 +51,5 @@
 @import "components/tender-card";
 @import "components/table";
 @import "components/modal";
-
 @import "components/navigation";
+@import "components/pagination";
