--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -28,30 +28,32 @@
 
 .navigation__link{
   display: inline-block;
-  padding: 12.5px 20px;
+  padding: 15px 20px;
   text-decoration: none;
   position: relative;
   z-index: 2;
   color: #001D3A;
   font-weight: $font-weight-medium;
+  transition: color 0.2s ease-in-out;
 
-  &::after{
-    content: '';
-    display: block;
-    height: 3px;
-    width: 100%;
-    border-radius: 8px;
-    background: $blue;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity .3s;
-  }
+  // &::after{
+  //   content: '';
+  //   display: block;
+  //   height: 3px;
+  //   width: 100%;
+  //   border-radius: 8px;
+  //   background: $blue;
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 0;
+  //   opacity: 0;
+  //   transition: opacity .3s;
+  // }
 
   &:hover {
-    &::after{
-      opacity: 1;
-    }
+    color: #3275EE;
+    // &::after{
+    //   opacity: 1;
+    // }
   }
 }
