--- a/src/scss/components/_inputs.scss
+++ b/src/scss/components/_inputs.scss
@@ -72,28 +72,30 @@
     display: block;
 }
 
-[type="radio"]:checked,
-[type="radio"]:not(:checked) {
+
+
+input[type="radio"]:checked,
+input[type="radio"]:not(:checked) {
+    display: none;
     position: absolute;
     left: -9999px;
 }
-[type="radio"]:checked + label,
-[type="radio"]:not(:checked) + label
-{
+input[type="radio"]:checked + label,
+input[type="radio"]:not(:checked) + label {
     position: relative;
     padding-left: 24px;
     cursor: pointer;
     line-height: 20px;
     display: inline-block;
     color: $text_color;
-    font-size: 16px;
+    font-size: 14px;
 }
-[type="radio"]:checked + label:before,
-    [type="radio"]:not(:checked) + label:before{
+input[type="radio"]:checked + label:before,
+input[type="radio"]:not(:checked) + label:before{
     content: '';
     position: absolute;
     left: 0;
-    top: 2px;
+    top: 1px;
     width: 16px;
     height: 16px;
     border: 2px solid #646464;
@@ -101,7 +103,7 @@
     background: #fff;
 }
 
-[type="radio"]:checked + label:before {
+input[type="radio"]:checked + label:before {
     border: 4px solid #3275EE;
 }
 
@@ -116,12 +118,13 @@ label {
 input[type="checkbox"], input[type="radio"] {
     position: absolute;
     left: -999em;
+    display: none;
 }
 input[type="checkbox"] + span{
     padding-left: 24px;
     color: $text_color;
-    font-size: 16px;
-    line-height: 160%;
+    font-size: 14px;
+    line-height: 22px;
 }
 
 input[type="checkbox"] + span:before {
@@ -132,7 +135,7 @@ input[type="checkbox"] + span:before {
     position: absolute;
     top: 50%;
     left: 0;
-    transform: translateY(-50%);
+    transform: translateY(-9px);
     vertical-align: middle;
     border: 2px solid #646464;
     border-radius: 2px;
@@ -150,7 +153,7 @@ input[type="checkbox"]:checked + span:after {
     position: absolute;
     top: 50%;
     left: 0;
-    transform: translateY(-50%);
+    transform: translateY(-9px);
     width: 16px;
     height: 16px;
     background-image: url(../img/check-icon.svg);
