--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -88,15 +88,21 @@
 }
 
 .header__dropdown-menu{
-  width: 100vw;
+  width: 1250px;
   height: 516px;
-  transform: translateX(100px);
+  transform: translateX(-270px);
+  margin-top: 12px !important;
   padding: 0;
   border: none;
   box-shadow: 0px 2px 8px rgba(0, 29, 58, 0.12);
 }
 
+.header__dropdown .container {
+  height: 100%;
+}
+
 .header__dropdown-menu-inner{
+  width: 100%;
   height: 100%;
 }
 
@@ -116,7 +122,8 @@
 .header__nav{
   border: none;
   outline: none;
-  padding: 12px 0;
+  padding: 12px 30px;
+  text-align: left;
   font-size: 16px;
   line-height: 160%;
   color: $text_color;
@@ -255,6 +262,53 @@
 
 }
 
+.header__search--infocus .header__search-input {
+  background: #fff;
+}
+
+.header__search--infocus {
+  .select2-container--default .select-header,
+  .select2-container--default .select-header .select2-selection__rendered {
+    background: #fff;
+  }
+}
+
+.header__search-result {
+  position: absolute;
+  left: 0;
+  top: 100%;
+  padding: 10px 0;
+  margin-top: 8px;
+  max-height: 300px;
+  border: 1px solid #DFDEE2;
+  background: #fff;
+  border-radius: 8px;
+  overflow-y: auto;
+  z-index: 10;
+  width: 100%;
+  display: none;
+}
+
+.header__search-link {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  line-height: 160%;
+  height: 42px;
+  padding: 0 12px;
+  color: #001D3A;
+  background: #fff;
+  text-decoration: none;
+
+  &:hover {
+    background: #F9F9F9;
+    color: #3275EE;
+  }
+}
+
+.header__search--searching .header__search-result {
+  display: block;
+}
 
 .burger {
   display: inline-flex;
