--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -41,6 +41,10 @@ p {
     color: #646464 !important;
 }
 
+.fw-500 {
+    font-weight: 500;
+}
+
 .link {
     font-size: 16px;
     color: #3275EE;
