--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -197,7 +197,7 @@
     flex-shrink: 0;
 
     svg {
-        margin-right: 5px;
+        margin-right: 8px;
     }
 }
 
@@ -549,4 +549,32 @@
 
 .catalog__filter__label {
     margin-right: 16px;
+}
+
+.catalog-search__panel {
+    display: flex;
+    align-items: center;
+    padding-top: 24px;
+}
+
+.catalog-search {
+    position: relative;
+    width: 664px;
+}
+
+.catalog-search__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 41px;
+    padding: 0;
+    border-radius: 8px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.catalog-search__panel .catalog__filter-btn {
+    margin-left: auto;
 }
