--- a/src/scss/components/_grid.scss
+++ b/src/scss/components/_grid.scss
@@ -1,5 +1,19 @@
+html {
+    height: 100%;
+}
+
 .container {
     width: 1250px;
     max-width: 1250px;
     padding: 0;
+}
+
+.page {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+  
+.content {
+    flex-grow: 1;
 }
