страница одной комании, страница добавить в чёрный список - без компонента загрузки файлов

--- a/src/scss/components/_black-card.scss
+++ b/src/scss/components/_black-card.scss
@@ -9,6 +9,10 @@
   line-height: 160%;
   color: #646464;
   margin-bottom: 8px;
+
+  strong{
+    font-weight: $font-weight-medium;
+  }
 }
 
 .black-card__info{
