--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,7 +59,7 @@
 @import "components/recovery";
 @import "components/info-block";
 @import "components/ _personal-account";
-@import "components/additional";
+@import "src/scss/pages/additional";
 @import "components/black-card";
 
 //Layout
