--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -31,6 +31,20 @@ h4, .h4 {
     margin: 0;
 }
 
+h5, .h5 {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 160%;
+    margin: 0;
+}
+
+h6, .h6 {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 160%;
+    margin: 0;
+}
+
 p {
     font-size: 16px;
     line-height: 26px;
