сделал загрузчик файлов, добавил на страницу чёрный список

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -61,6 +61,7 @@
 @import "components/ _personal-account";
 @import "src/scss/pages/additional";
 @import "components/black-card";
+@import "components/loader";
 
 //Layout
 @import "layout/header";
