--- a/src/scss/components/_loader.scss
+++ b/src/scss/components/_loader.scss
@@ -10,13 +10,20 @@
   text-indent: -9999em;
   border-top: 4px solid rgba(255, 255, 255, 0.2);
   border-right: 4px solid rgba(255, 255, 255, 0.2);
-  border-bottom: 4px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 4px solid #ffffff;
   border-left: 4px solid #ffffff;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
+
+  &--dark {
+    border-top: 4px solid rgba(0, 29, 58, 0.2);
+    border-right: 4px solid rgba(0, 29, 58, 0.2);
+    border-bottom: 4px solid rgba(0, 29, 58, 0.9);
+    border-left: 4px solid rgba(0, 29, 58, 0.9);
+  }
 }
 @-webkit-keyframes load8 {
   0% {
