--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,6 +62,7 @@
 @import "src/scss/pages/additional";
 @import "components/black-card";
 @import "components/loader";
+@import "components/advertisement-card";
 
 //Layout
 @import "layout/header";
