--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,6 +63,7 @@
 @import "components/black-card";
 @import "components/loader";
 @import "components/advertisement-card";
+@import "components/dictionary-menu";
 
 //Layout
 @import "layout/header";
