--- a/src/scss/components/dictionary-menu.scss
+++ b/src/scss/components/dictionary-menu.scss
@@ -20,7 +20,7 @@
 
   img {
     position: absolute;
-    right: 20px;
+    right: 0;
     top: 50%;
     transition: transform .2s;
     transform: translateY(-50%) rotate(0);
