работа над страницей tender-bidding

--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -4,6 +4,7 @@ $yellow: #FCF29C;
 $text_color: #001D3A;
 $grey: #646464;
 $green: #44C325;
+$red: #FF3D3D;
 
 // FONT FAMILY
 $font-weight-normal: 400;         // Regular (normal)
