--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,6 +64,8 @@
 @import "components/loader";
 @import "components/advertisement-card";
 @import "components/dictionary-menu";
+@import "components/status";
+@import "components/customer-info";
 
 //Layout
 @import "layout/header";
@@ -72,3 +74,4 @@
 // pages
 @import "pages/advertisment";
 @import "pages/register";
+@import "pages/tender-page";
