--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,7 +59,6 @@
 @import "components/recovery";
 @import "components/info-block";
 @import "components/ _personal-account";
-@import "src/scss/pages/additional";
 @import "components/black-card";
 @import "components/loader";
 @import "components/advertisement-card";
@@ -75,3 +74,5 @@
 @import "pages/advertisment";
 @import "pages/register";
 @import "pages/tender-page";
+@import "pages/additional";
+
