--- a/src/scss/pages/_tender-page.scss
+++ b/src/scss/pages/_tender-page.scss
@@ -1,6 +1,8 @@
 @import '../abstract/_variables.scss';
 
 .tender-page{
+  display: flex;
+  padding-bottom: 120px;
 
   strong{
     font-weight: $font-weight-medium;
@@ -8,7 +10,7 @@
 }
 
 .tender-page__row{
-  display: flex;
+  width: 100%;
 
   & + & {
     margin: 24px 0 0 0;
@@ -16,23 +18,27 @@
 }
 
 .tender-page__content{
-  width: 930px;
-  flex-shrink: 0;
+  flex: 1;
 }
 
 .tender-page__section{
+  margin-top: 32px;
+
+  &--lg {
+    margin-top: 48px;
+  }
 }
 
 .tender-page__sidebar{
-  flex-grow: 1;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
+  width: 397px;
   margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .tender-page__text{
-  margin: 0 0 8px 0;
+  margin: 0 0 12px 0;
 
   &--grey {
     color: $grey;
@@ -48,5 +54,44 @@
 
   &--sm{
     font-size: 14px;
+  }
+}
+
+.tender-page__info{
+
+}
+
+.tender-page__info-row{
+
+  & + & {
+    margin-top: 8px;
+  }
+
+}
+
+.tender-page__info-grey{
+  color: $grey;
+}
+
+.tender-page__form{
+  max-width: 360px;
+
+  &--lg {
+    max-width: 480px;
+  }
+
+  .materil-group{
+    margin-top: 24px;
+  }
+}
+
+.tender-page__form-label {
+  margin-bottom: -8px;
+}
+
+.tender-page__form-field{
+
+  & + & {
+    margin-top: 16px;
   }
 }
