--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,11 @@
     transition: none !important;
 }
 
+// SLick
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+@import "components/slider";
+
 // BS Abstract
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
