--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -40,3 +40,36 @@
   left: 45px;
   transform: translateY(-50%) rotate(90deg);
 }
+
+.slider-wrapper .slick-dots {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.slider-wrapper .slick-dots li {
+  margin: 0 4px;
+  width: auto;
+  height: auto;
+}
+
+.slider-wrapper .slick-dots li button {
+  padding: 0;
+  width: 8px;
+  height: 8px;
+  font-size: 0;
+  color: transparent;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.5);
+
+  &:before {
+    content: none;
+  }
+}
+
+.slider-wrapper .slick-dots li.slick-active button {
+  background: #fff;
+}
