--- a/src/scss/pages/_ceni-postavshikov-card.scss
+++ b/src/scss/pages/_ceni-postavshikov-card.scss
@@ -8,10 +8,73 @@
     margin-bottom: 24px;
 }
 
-.product-card__img {
-    width: 503px;
-    height: 513px;
+.product-card__carusel {
+    width: 610px;
+    height: 503px;
     margin-right: 30px;
+    display: flex;
+    align-items: flex-start;
+}
+
+.product-card__carusel .slick-slide {
+    border: none;
+}
+
+.product-card__slider-nav {
+    width: 77px;
+    margin-right: 30px;
+}
+
+.product-card__slider-nav .slick-slide {
+    margin-bottom: 16px;
+}
+
+.product-card__slider-nav .slick-slide > div {
+    height: 77px;
+}
+
+.product-card__slider-nav .slider-item {
+    width: 77px;
+    height: 77px;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-bottom: 16px;
+    position: relative;
+}
+
+.product-card__slider-nav .slider-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.product-card__slider-nav .slick-slide.slick-current .slider-item:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    border: 2px solid #3275EE;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+
+.product-card__slider {
+    width: 503px;
+}
+
+.product-card__slider .slider-item {
+    width: 503px;
+    height: 503px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.product-card__slider .slider-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .product-card__link {
@@ -28,31 +91,24 @@
 
 .product-card__params {
     flex: 1;
-    margin-right: 31px;
+    margin-right: 30px;
 }
 
 .product-card__params__item {
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: 16px;
 }
 
 .product-card__params-name {
     color: #646464;
     font-size: 14px;
+    margin-right: 3px;
 }
 
 .product-card__params-value {
     color: #001D3A;
     font-size: 14px;
-    width: 111px;
-    max-width: 111px;
-}
-
-.product-card__params-border {
-    flex: 1;
-    border-bottom: 1px dashed #646464;
-    transform: translateY(-7px);
-    margin: 0 3px;
 }
 
 .product-card__provider {
