страницы заявки (остался селект в таблице)

--- a/src/scss/components/_inputs.scss
+++ b/src/scss/components/_inputs.scss
@@ -21,6 +21,12 @@
         background: #fff;
         border-color: #3275EE;
     }
+
+    &--sm {
+        height: 38px;
+        font-size: 14px;
+        width: 100%;
+    }
 }
 
 .search-input {
