--- a/src/scss/pages/_tender-page.scss
+++ b/src/scss/pages/_tender-page.scss
@@ -35,6 +35,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+
+  &--statement {
+    padding-top: 134px;
+  }
 }
 
 .tender-page__text{
