--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -26,6 +26,19 @@
   padding-left: 16px;
 }
 
+.table__head{
+  .table-v2 & {
+    font-size: 18px;
+    padding: 12px 16px;
+  }
+}
+
+.table__body {
+  .table-v2 & {
+    padding: 4px 16px 8px;
+  }
+}
+
 .table__row{
   padding: 0;
   font-weight: $font-weight-normal;
@@ -33,6 +46,10 @@
 
   &:nth-child(2n + 1) {
     background-color: #fff;
+  }
+
+  .table-v2 & {
+    background-color: #fff!important;
   }
 
   .table--bordered & {
@@ -49,6 +66,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  .table-v2 & {
+    padding: 8px 0;
+  }
 
   //tender-table
 
@@ -122,6 +143,32 @@
     width: 216px;
   }
 
+  &--params {
+    width: 118px;
+  }
+
+  //statement
+  &--stitle{
+    width: 143px;
+  }
+
+  &--asize {
+    width: 104px;
+  }
+
+  &--scount {
+    width: 68px;
+  }
+
+  &--swidth {
+    width: 106px;
+  }
+
+  &--scost {
+    flex-direction: row;
+    align-items: center;
+    width: 159px;
+  }
 }
 
 .table__status{
@@ -145,6 +192,18 @@
   &:last-child{
     border: none;
   }
+}
+
+.table__label {
+  font-size: 12px;
+  line-height: 160%;
+  color: $grey;
+  margin: 0 0 4px 0;
+}
+
+.table__value {
+  flex-shrink: 0;
+  padding-left: 8px;
 }
 
 
